--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,33 @@
-Eco Farm Technologies website
+<div style="width: 1480px; height: 835px; position: relative; background: #606C38; overflow: hidden">
+  <div style="width: 1511px; height: 147px; left: 0px; top: 2px; position: absolute; background: rgba(30.81, 30.04, 30.04, 0.36)"></div>
+  <img style="width: 1494px; height: 704px; left: 0px; top: 149px; position: absolute" src="tractor.png" />
+  <div style="width: 290px; height: 49px; left: 1165px; top: 50px; position: absolute; color: white; font-size: 24px; font-family: sans-serif; font-weight: 700; word-wrap: break-word">Insights & Resources</div>
+  <div style="width: 400px; height: 95px; left: 813px; top: 50px; position: absolute; color: white; font-size: 24px; font-family: sans-serif; font-weight: 700; word-wrap: break-word">Research & Development</div>
+  <div style="width: 181px; height: 49px; left: 624px; top: 49px; position: absolute; color: white; font-size: 24px; font-family: sans-serif; font-weight: 700; word-wrap: break-word">Solutions</div>
+  <div style="width: 178px; height: 49px; left: 426px; top: 51px; position: absolute; color: white; font-size: 24px; font-family: sans-serif; font-weight: 700; word-wrap: break-word">About Us</div>
+  <div style="left: 136px; top: 327px; position: absolute; text-align: center; color: white; font-size: 32px; font-family: Lora; font-weight: 500; word-wrap: break-word">Where Innovation Meets Agriculture<br/> for a Greener Future</div>
+  <div style="width: 817px; height: 87px; left: 114px; top: 475px; position: absolute; background: rgba(13.81, 8.06, 8.06, 0.67); overflow: hidden">
+    <div style="width: 187px; height: 45px; left: 33px; top: 25px; position: absolute; text-align: center; color: white; font-size: 14px; font-family: Lora; font-weight: 400; word-wrap: break-word">General industry <br/>articles</div>
+    <div style="width: 16px; height: 15px; left: 40px; top: 27px; position: absolute; border-radius: 9999px; border: 1px white solid"></div>
+    <div style="width: 16px; height: 15px; left: 214px; top: 25px; position: absolute; border-radius: 9999px; border: 1px white solid"></div>
+    <div style="width: 16px; height: 15px; left: 351px; top: 27px; position: absolute; border-radius: 9999px; border: 1px white solid"></div>
+    <div style="width: 8.49px; height: 0px; left: 53px; top: 40px; position: absolute; transform: rotate(45deg); transform-origin: top left; outline: 1px white solid; outline-offset: -0.50px"></div>
+    <div style="width: 8.49px; height: 0px; left: 364px; top: 40px; position: absolute; transform: rotate(45deg); transform-origin: top left; outline: 1px white solid; outline-offset: -0.50px"></div>
+    <div style="width: 8.49px; height: 0px; left: 227px; top: 37px; position: absolute; transform: rotate(45deg); transform-origin: top left; outline: 1px white solid; outline-offset: -0.50px"></div>
+    <div style="width: 166px; height: 23px; left: 209px; top: 25px; position: absolute; text-align: center; color: white; font-size: 14px; font-family: Lora; font-weight: 400; word-wrap: break-word">Educational<br/> resources</div>
+    <div style="width: 166px; height: 23px; left: 391px; top: 25px; position: absolute; text-align: center; color: white; font-size: 14px; font-family: Lora; font-weight: 400; word-wrap: break-word">Guides on tech adoption in agriculture</div>
+    <div style="width: 216px; height: 87px; left: 601px; top: 0px; position: absolute; background: #A8201A; overflow: hidden; outline: 2px white solid; outline-offset: -2px">
+      <div style="width: 181px; height: 49px; left: 73px; top: 30px; position: absolute; color: white; font-size: 20px; font-family: Lora; font-weight: 700; word-wrap: break-word">read more</div>
+      <img style="width: 30px; height: 30px; left: 21px; top: 25px; position: absolute" src="readmore.png" />
+    </div>
+  </div>
+  <div style="width: 5px; height: 5px; left: 335px; top: 450px; position: absolute"></div>
+  <div style="width: 193px; height: 62px; left: 163px; top: 41px; position: absolute; text-align: center; color: white; font-size: 24px; font-family: sans-serif; font-weight: 700; word-wrap: break-word">ECO FARM Technologies</div>
+  <div style="width: 26.02px; height: 0px; left: 359px; top: 72.21px; position: absolute; outline: 1px white solid; outline-offset: -0.50px"></div>
+  <div style="width: 26.02px; height: 0px; left: 136px; top: 72.21px; position: absolute; outline: 1px white solid; outline-offset: -0.50px"></div>
+  <div style="width: 216px; height: 30px; left: 671px; top: 762px; position: absolute; background: rgba(168, 32, 26, 0.70); overflow: hidden">
+    <div style="width: 391px; height: 40px; left: 50px; top: 3px; position: absolute; color: white; font-size: 16px; font-family: sans-serif; font-weight: 800; word-wrap: break-word">HERO SECTION</div>
+  </div>
+  <div style="width: 764px; height: 28px; left: 1123px; top: 807px; position: absolute; color: rgba(255, 255, 255, 0.49); font-size: 13px; font-family: Lora; font-weight: 500; word-wrap: break-word"> © 2024 Eco Farm Technologies Inc. All rights reserved.</div>
+  <img style="width: 107px; height: 124px; left: 19px; top: 10px; position: absolute" src="logo.png" />
+</div>
