--- a/web/index.html
+++ b/web/index.html
@@ -1,33 +1,281 @@
-<div style="width: 1480px; height: 835px; position: relative; background: #606C38; overflow: hidden">
-  <div style="width: 1511px; height: 147px; left: 0px; top: 2px; position: absolute; background: rgba(30.81, 30.04, 30.04, 0.36)"></div>
-  <img style="width: 1494px; height: 704px; left: 0px; top: 149px; position: absolute" src="tractor.png" />
-  <div style="width: 290px; height: 49px; left: 1165px; top: 50px; position: absolute; color: white; font-size: 24px; font-family: sans-serif; font-weight: 700; word-wrap: break-word">Insights & Resources</div>
-  <div style="width: 400px; height: 95px; left: 813px; top: 50px; position: absolute; color: white; font-size: 24px; font-family: sans-serif; font-weight: 700; word-wrap: break-word">Research & Development</div>
-  <div style="width: 181px; height: 49px; left: 624px; top: 49px; position: absolute; color: white; font-size: 24px; font-family: sans-serif; font-weight: 700; word-wrap: break-word">Solutions</div>
-  <div style="width: 178px; height: 49px; left: 426px; top: 51px; position: absolute; color: white; font-size: 24px; font-family: sans-serif; font-weight: 700; word-wrap: break-word">About Us</div>
-  <div style="left: 136px; top: 327px; position: absolute; text-align: center; color: white; font-size: 32px; font-family: Lora; font-weight: 500; word-wrap: break-word">Where Innovation Meets Agriculture<br/> for a Greener Future</div>
-  <div style="width: 817px; height: 87px; left: 114px; top: 475px; position: absolute; background: rgba(13.81, 8.06, 8.06, 0.67); overflow: hidden">
-    <div style="width: 187px; height: 45px; left: 33px; top: 25px; position: absolute; text-align: center; color: white; font-size: 14px; font-family: Lora; font-weight: 400; word-wrap: break-word">General industry <br/>articles</div>
-    <div style="width: 16px; height: 15px; left: 40px; top: 27px; position: absolute; border-radius: 9999px; border: 1px white solid"></div>
-    <div style="width: 16px; height: 15px; left: 214px; top: 25px; position: absolute; border-radius: 9999px; border: 1px white solid"></div>
-    <div style="width: 16px; height: 15px; left: 351px; top: 27px; position: absolute; border-radius: 9999px; border: 1px white solid"></div>
-    <div style="width: 8.49px; height: 0px; left: 53px; top: 40px; position: absolute; transform: rotate(45deg); transform-origin: top left; outline: 1px white solid; outline-offset: -0.50px"></div>
-    <div style="width: 8.49px; height: 0px; left: 364px; top: 40px; position: absolute; transform: rotate(45deg); transform-origin: top left; outline: 1px white solid; outline-offset: -0.50px"></div>
-    <div style="width: 8.49px; height: 0px; left: 227px; top: 37px; position: absolute; transform: rotate(45deg); transform-origin: top left; outline: 1px white solid; outline-offset: -0.50px"></div>
-    <div style="width: 166px; height: 23px; left: 209px; top: 25px; position: absolute; text-align: center; color: white; font-size: 14px; font-family: Lora; font-weight: 400; word-wrap: break-word">Educational<br/> resources</div>
-    <div style="width: 166px; height: 23px; left: 391px; top: 25px; position: absolute; text-align: center; color: white; font-size: 14px; font-family: Lora; font-weight: 400; word-wrap: break-word">Guides on tech adoption in agriculture</div>
-    <div style="width: 216px; height: 87px; left: 601px; top: 0px; position: absolute; background: #A8201A; overflow: hidden; outline: 2px white solid; outline-offset: -2px">
-      <div style="width: 181px; height: 49px; left: 73px; top: 30px; position: absolute; color: white; font-size: 20px; font-family: Lora; font-weight: 700; word-wrap: break-word">read more</div>
-      <img style="width: 30px; height: 30px; left: 21px; top: 25px; position: absolute" src="readmore.png" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Eco Farm Technologies</title>
+  <style>
+    /* Basic Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: sans-serif;
+      background-color: #606C38;
+      color: #fff;
+    }
+
+    /* Page Container */
+    .page-container {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    /* Header */
+    .header {
+      background: rgba(31, 30, 30, 0.36);
+      padding: 10px 20px;
+    }
+
+    .nav-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: relative;
+    }
+
+    .logo img {
+      height: 60px;
+    }
+
+    .site-title {
+      font-size: 24px;
+      font-weight: 700;
+      margin-left: 10px;
+    }
+
+    /* Menu Toggle (Hamburger) for Mobile */
+    .menu-toggle {
+      display: none;
+      font-size: 28px;
+      cursor: pointer;
+    }
+
+    /* Navigation Menu */
+    .nav-menu ul {
+      display: flex;
+      list-style: none;
+      gap: 20px;
+      font-size: 18px;
+      font-weight: 700;
+    }
+
+    .nav-menu a {
+      text-decoration: none;
+      color: #fff;
+    }
+
+    .nav-menu a:hover {
+      opacity: 0.8;
+    }
+
+    /* Main Screen */
+    .main-screen {
+      flex: 1;
+      width: 100%;
+    }
+
+    /* Hero Background: everything below the header, with overlay content */
+    .hero-background {
+      position: relative;
+      background: url("background-tractor.png") no-repeat center center / cover;
+      /* Enough padding to accommodate text & articles on top of background */
+      padding: 80px 20px 60px 20px;
+    }
+
+    /* Hero Text overlay */
+    .hero-text {
+      text-align: center;
+      font-size: 32px;
+      font-family: "Lora", serif;
+      font-weight: 500;
+      max-width: 600px;
+      line-height: 1.4;
+      margin: 0 auto 40px auto; /* center with space below for the next block */
+    }
+
+    /* Articles Section (also on top of background) */
+    .articles-section {
+      max-width: 900px;
+      width: 100%;
+      margin: 0 auto 40px auto;
+      background: rgba(14, 8, 8, 0.67);
+      padding: 20px;
+      border-radius: 4px;
+    }
+
+    .articles-list {
+      display: flex;
+      justify-content: space-around;
+      text-align: center;
+      flex-wrap: wrap;
+      row-gap: 20px;
+    }
+
+    .articles-list .category {
+      font-family: "Lora", serif;
+      font-weight: 400;
+      font-size: 14px;
+      width: 150px;
+    }
+
+    /* "Read More" Button */
+    .read-more-btn {
+      background: #A8201A;
+      border: 2px solid #fff;
+      color: #fff;
+      font-family: "Lora", serif;
+      font-weight: 700;
+      font-size: 20px;
+      width: 180px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 20px auto 0 auto;
+      cursor: pointer;
+    }
+
+    .read-more-btn img {
+      height: 24px;
+      width: 24px;
+      margin-right: 8px;
+    }
+
+    /* Placeholder block as in original design */
+    .hero-section-placeholder {
+      background: rgba(168, 32, 26, 0.7);
+      width: 220px;
+      margin: 40px auto 0 auto;
+      text-align: center;
+      font-size: 16px;
+      font-weight: 800;
+      font-family: sans-serif;
+      padding: 8px 0;
+    }
+
+    /* Footer */
+    .footer {
+      text-align: right;
+      font-family: "Lora", serif;
+      font-size: 13px;
+      font-weight: 500;
+      opacity: 0.7;
+      padding: 10px 20px;
+    }
+
+    /* MEDIA QUERIES FOR RESPONSIVE DESIGN */
+    @media (max-width: 900px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      .nav-menu ul {
+        display: none;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        background-color: rgba(31, 30, 30, 0.9);
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px;
+      }
+
+      /* Toggle class to show/hide the menu */
+      .nav-menu.active ul {
+        display: flex;
+      }
+
+      .site-title {
+        margin: 0 auto;
+      }
+
+      .hero-text {
+        font-size: 24px;
+        width: 80%;
+      }
+
+      .articles-list {
+        flex-direction: column;
+      }
+    }
+  </style>
+</head>
+<body>
+<div class="page-container">
+
+  <!-- Header (above ~149px) -->
+  <header class="header">
+    <div class="nav-bar">
+      <div class="logo">
+        <img src="logo.png" alt="Eco Farm Logo"/>
+      </div>
+      <div class="site-title">
+        ECO FARM Technologies
+      </div>
+      <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
+      <nav class="nav-menu">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Solutions</a></li>
+          <li><a href="#">Research & Development</a></li>
+          <li><a href="#">Insights & Resources</a></li>
+        </ul>
+      </nav>
     </div>
-  </div>
-  <div style="width: 5px; height: 5px; left: 335px; top: 450px; position: absolute"></div>
-  <div style="width: 193px; height: 62px; left: 163px; top: 41px; position: absolute; text-align: center; color: white; font-size: 24px; font-family: sans-serif; font-weight: 700; word-wrap: break-word">ECO FARM Technologies</div>
-  <div style="width: 26.02px; height: 0px; left: 359px; top: 72.21px; position: absolute; outline: 1px white solid; outline-offset: -0.50px"></div>
-  <div style="width: 26.02px; height: 0px; left: 136px; top: 72.21px; position: absolute; outline: 1px white solid; outline-offset: -0.50px"></div>
-  <div style="width: 216px; height: 30px; left: 671px; top: 762px; position: absolute; background: rgba(168, 32, 26, 0.70); overflow: hidden">
-    <div style="width: 391px; height: 40px; left: 50px; top: 3px; position: absolute; color: white; font-size: 16px; font-family: sans-serif; font-weight: 800; word-wrap: break-word">HERO SECTION</div>
-  </div>
-  <div style="width: 764px; height: 28px; left: 1123px; top: 807px; position: absolute; color: rgba(255, 255, 255, 0.49); font-size: 13px; font-family: Lora; font-weight: 500; word-wrap: break-word"> © 2024 Eco Farm Technologies Inc. All rights reserved.</div>
-  <img style="width: 107px; height: 124px; left: 19px; top: 10px; position: absolute" src="logo.png" />
+  </header>
+
+  <!-- Main Screen (below header) -->
+  <main class="main-screen">
+    <!-- Hero background plus overlayed content -->
+    <div class="hero-background">
+      <!-- Large text in the center -->
+      <div class="hero-text">
+        Where Innovation Meets Agriculture<br/>
+        for a Greener Future
+      </div>
+
+      <!-- Articles/Resources Section -->
+      <div class="articles-section">
+        <div class="articles-list">
+          <div class="category">
+            General industry<br/>articles
+          </div>
+          <div class="category">
+            Educational<br/>resources
+          </div>
+          <div class="category">
+            Guides on tech adoption<br/>in agriculture
+          </div>
+        </div>
+        <div class="read-more-btn">
+          <img src="readmore.png" alt="Read More Icon" />
+          read more
+        </div>
+      </div>
+
+      <!-- Placeholder block, as per original design -->
+      <div class="hero-section-placeholder">
+        HERO SECTION
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    © 2024 Eco Farm Technologies Inc. All rights reserved.
+  </footer>
 </div>
+
+<script>
+  function toggleMenu() {
+    var navMenu = document.querySelector('.nav-menu');
+    navMenu.classList.toggle('active');
+  }
+</script>
+</body>
+</html>
